--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Nova+Oval&family=Ojuju:wght@200..800&family=Roboto+Slab:wght@100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>
